Fix bad color combo on FAQ landing page in dark mode.

--- a/src/sass/misc/_faq-landing.scss
+++ b/src/sass/misc/_faq-landing.scss
@@ -15,7 +15,7 @@
 
         .header {
             color: $textBrandColor;
-            background-color: $boxBorderColor;
+            background-color: $mainBrandColor;
             padding: .35rem 1.25rem;
             border-bottom: 1px solid rgba(0, 0, 0, .125);
             text-align: center;
